--- a/hoodapp/templates/base.html
+++ b/hoodapp/templates/base.html
@@ -1,17 +1,32 @@
+{% load bootstrap4 %}
+
+
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  {% if title %}
-  <title>Neighbourhood - {{title}}</title>
-  {% else %}
+    {% if title %}
+    <title>Neighbourhood - {{title}}</title>
+    {% else %}
     <title> Neighbourhood </title>
-  {% endif %}
+    {% endif %}
 
+    {% block styles %}
+    {% bootstrap_css %}
+    {% endblock %}
 </head>
+
 <body>
-    {% block content %} 
+    {% block content %}
     {%endblock%}
+
+
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     {% bootstrap_javascript %}
+    {% endblock %}
 </body>
+
 </html>
