--- a/hoodapp/templates/base.html
+++ b/hoodapp/templates/base.html
@@ -1,5 +1,5 @@
 {% load bootstrap4 %}
-
+{% load static %}
 
 <!DOCTYPE html>
 <html>
@@ -15,10 +15,12 @@
 
     {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 </head>
 
 <body>
+    {% include "navbar.html" %}
     {% block content %}
     {%endblock%}
 
