--- a/hoodapp/templates/home.html
+++ b/hoodapp/templates/home.html
@@ -1,4 +1,15 @@
 {%extends 'base.html'%}
 
 {% block content %}
+<div class="row home">
+    <div class="col-3"></div>
+    <div class="col-6 intro text-center">
+        <h1 class="text-center text-dark fw-bold">Welcome to the neighbourhood app</h1>
+        <p class="pt-3 pb-3 text-dark">
+            Showcasing amazing neighbourhoods 
+            near you
+        </p>
+    </div>
+    <div class="col-3"></div>
+</div>
 {% endblock %}
