--- a/hoodapp/templates/base.html
+++ b/hoodapp/templates/base.html
@@ -20,6 +20,19 @@
 </head>
 
 <body>
+    <style>
+        .home{
+            background-image: url('https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8YmVhdXRpZnVsJTIwaG91c2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80');
+            height:550px;
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            background-color: black;
+        }
+        .intro{
+            font-size: 45px;
+            font-weight: 600; 
+}
+    </style>
     {% include "navbar.html" %}
     {% block content %}
     {%endblock%}
