--- a/hoodapp/templates/home.html
+++ b/hoodapp/templates/home.html
@@ -1,13 +1,14 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="row home">
     <div class="col-3"></div>
     <div class="col-6 intro text-center">
-        <h1 class="text-center text-dark fw-bold">Welcome to the neighbourhood app</h1>
-        <p class="pt-3 pb-3 text-dark">
+        <h1 class="text-center text-light pt-5 fw-bold">NEIGHBOURHOOD APP</h1>
+        <p class="pt-5 pb-3 text-primary">
+            Welcome to the neighbourhood app
             Showcasing amazing neighbourhoods 
-            near you
+            near you.
         </p>
     </div>
     <div class="col-3"></div>
