--- a/hoodapp/templates/navbar.html
+++ b/hoodapp/templates/navbar.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar bg-primary navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}">The Neighbourhood</a>
+      <a class="navbar-brand text-light" href="{% url 'home' %}">The Neighbourhood</a>
     </div>
   </div>
 </nav>
