--- a/hoodapp/templates/profile.html
+++ b/hoodapp/templates/profile.html
@@ -28,7 +28,7 @@
                 <input type="submit" class="btn btn-success btn-lg" value="Add">
             </form>
         </div>
-        <!-- <div class="col-6">
+        <div class="col-6">
             {%if profile.profile_photo%}
             <img src="{{profile.prof_photo.cdn_url}}" class="rounded-circle"
               alt="avatar image">
@@ -50,7 +50,7 @@
             <p>You have no bio</p>
             {%endif%}
         </div>
-    </div> -->
+    </div>
 
     {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
