create project description and author

--- a/hoodapp/templates/home.html
+++ b/hoodapp/templates/home.html
@@ -14,7 +14,7 @@
     <div class="col-3"></div>
 </div>
 <div class="hoods">
-    <h1 class="text-center text-dark fw-bold">Neeighbourhoods</h1>
+    <h1 class="text-center text-dark fw-bold">Neighbourhoods</h1>
     {% for hood in hoods %}
     <div class="row">
         <div class="col-lg-8 d-flex align-items-stretch">
