--- a/hoodapp/templates/navbar.html
+++ b/hoodapp/templates/navbar.html
@@ -39,6 +39,9 @@
                 <a href="{%url 'home'%}">Home</a>
               </li>
               <li>
+                <a href="{%url 'myprofile'%}">Profile</a>
+              </li>
+              <li>
                 <a href="/accounts/password/change">Change Password</a>
               </li>
               <li>
